Update composer api version to 2.2 and tool dependencies
Read more: https://blog.packagist.com/composer-2-2/

--- a/composer.json
+++ b/composer.json
@@ -37,7 +37,10 @@
   },
   "config": {
     "optimize-autoloader": true,
-    "platform-check": false
+    "platform-check": false,
+    "allow-plugins": {
+      "getkirby/composer-installer": true
+    }
   },
   "extra": {
     "unused": [
